# axum-api

./: Cargo.toml
migrations/: 20251010035756_create_email_verification_tokens.sql  20251010041725_add_email_verified_to_users.sql  20251019103526_create_password_reset_tokens.sql
src/: main.rs  state.rs
src/auth/: jwt.rs  middleware.rs  password.rs
src/handlers/: auth.rs  health.rs
src/models/: mod.rs  password_reset_tokens.rs
src/repositories/: email_verification_repository.rs  mod.rs  password_reset_repository.rs  traits.rs  user_repository.rs
src/schemas/: mod.rs  user_schemas.rs
src/services/: email_service.rs
src/utils/: token_generator.rs
